Sometimes RenderLayer::updateNeedsCompositedScrolling is not called https://bugs.webkit.org/show_bug.cgi?id=106271

Reviewed by Simon Fraser.

Source/WebCore:

1. If a layer has no out-of-flow descendant, m_hasOutOfFlowPositionedDescendant won't change and won't trigger updateNeedsCompositedScrolling in updateDescendantDependentFlags. Set m_hasOutOfFlowPositionedDescendantDirty to true and call updateNeedsCompositedScrolling when the dirty flag becomes false from true.
2. When the content size changes causing change of scrollable status, updateNeedsCompositedScrolling should also be called.

Test: compositing/overflow/dynamic-composited-scrolling-status.html

* page/FrameView.cpp:
(WebCore::FrameView::addScrollableArea): Returns whether the scrollable area has just been newly added.
(WebCore::FrameView::removeScrollableArea): Returns whether the scrollable area has just been removed.
* page/FrameView.h:
(FrameView):
* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::RenderLayer): Changed the initial value of m_hasOutOfFlowPositionedDescendantDirty to true to make sure m_hasOutOfFlowPositionedDescendant will be updated initially.
(WebCore::RenderLayer::updateDescendantDependentFlags): Call updateNeedsCompositedScrolling when m_hasOutOfFlowPositionedDescendantDirty is true.
(RenderLayer::updateScrollableAreaSet): Calls updateNeedsCompositedScrolling() when scrollable status changes.
* rendering/RenderLayer.h:
(RenderLayer):

LayoutTests:

* compositing/overflow/dynamic-composited-scrolling-status-expected.txt: Added.
* compositing/overflow/dynamic-composited-scrolling-status.html: Added.


Canonical link: https://commits.webkit.org/125079@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139691 268f45cc-cd09-0410-ab3c-d52691b4dbfc